--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -6,6 +6,9 @@ app.description=<a href="https://github.com/JavaOPs/topjava">Java Enterprise про
 Весь REST интерфейс покрывается JUnit тестами, используя Spring MVC Test и Spring Security Test.
 app.footer=Приложение стажировки <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
 app.login=Зайти как
+app.profile=профиль
+app.register=Регистрация
+app.registered=Вы зарегистрированы. Введите ваш логин/пароль.
 
 user.title=Пользователи
 user.edit=Редактировать пользователя
