--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -21,6 +21,11 @@ user.registered=Зарегистрирован
 user.password=Пароль
 user.caloriesPerDay=Норма калорий в день
 
+userTo.name=Имя
+userTo.email=Почта
+userTo.password=Пароль
+userTo.caloriesPerDay=Норма калорий в день
+
 meal.title=Моя еда
 meal.edit=Редактировать еду
 meal.add=Добавить еду
